--- a/css/utilities.css
+++ b/css/utilities.css
@@ -19,12 +19,15 @@ h2::selection {
 
 /* Buttons */
 .btn {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 0.75rem 1.9rem;
   border-radius: 30px;
   text-transform: uppercase;
   font-size: 0.82rem;
   transition: 0.3s;
+  text-align: center;
 }
 
 .btn-primary {
